--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.5.0",
     "fastify": "^5.3.3",
     "mongodb": "^6.16.0",
-    "zod": "^3.25.24"
+    "zod": "^3.25.24",
+    "zod-to-json-schema": "^3.24.5"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
