--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "type": "commonjs",
   "dependencies": {
     "@prisma/client": "^6.8.2",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "fastify": "^5.3.3",
     "mongodb": "^6.16.0",
